Fix front page on smaller monitors

--- a/app/styles/footer.less
+++ b/app/styles/footer.less
@@ -11,7 +11,7 @@
     &__content {
         display: flex;
         flex-direction: column;
-        margin-top: 20px;
+        margin-top: 120px;
         width: 100%;
     }
 
