--- a/app/styles/pages/index.less
+++ b/app/styles/pages/index.less
@@ -8,7 +8,7 @@
 .index {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
 
     .page__logo-container {
         animation: fadein 1s;
